<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.mycompany.behear.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/bar"

        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/whats"
            android:textStyle="italic"
            android:text="@string/whats"
            android:layout_marginLeft="8dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@null"

            />
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/logo_small"
            android:layout_toRightOf="@id/whats"

            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:id="@+id/about"
            android:textStyle="italic"
            android:text="@string/about"
            android:clickable="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            />

    </RelativeLayout>


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@id/bar"
        android:layout_marginTop="20dp"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        map:mapType="normal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/checkbox_votes" />

    <CheckBox android:id="@+id/offlineMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offlineMode"
        android:layout_above="@+id/checkbox_socio"
        android:layout_alignRight="@+id/map"
        android:layout_alignEnd="@+id/map"
        android:layout_marginRight="11dp"
        android:buttonTint="@color/common_plus_signin_btn_text_light"/>

    <CheckBox android:id="@+id/checkbox_socio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/socio"
        android:checked="false"
        android:buttonTint="@color/common_plus_signin_btn_text_light"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox android:id="@+id/checkbox_votes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/votes"
        android:layout_above="@+id/checkbox_socio"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:buttonTint="@color/common_plus_signin_btn_text_light"/>

    <!--<CheckBox android:id="@+id/check_box_sexual_harassment"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/sexual"-->
        <!--android:checked="false"-->
        <!--android:buttonTint="@color/common_plus_signin_btn_text_light"-->
        <!--android:layout_alignBottom="@+id/offlineMode"-->
        <!--android:layout_centerHorizontal="true" />-->

    <CheckBox android:id="@+id/check_box_property_crime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/property"
        android:checked="false"
        android:buttonTint="@color/common_plus_signin_btn_text_light"
        android:layout_above="@+id/checkbox_socio"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
